--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<img width="400px" src="https://i.imgur.com/l9cTFQf.jpeg"/>
 					<img width="400px" src="https://i.imgur.com/bpTkanC.jpeg"/>
 				</div>
-				<p>Merhaba, ben Ata 20 yaşındayım, 18-30 yaş arası bayanlara hizmet veriyorum. Saatlik <strong>400 tl</strong>.</p>
+				<p color="white">Merhaba, ben Ata 20 yaşındayım, 18-30 yaş arası bayanlara hizmet veriyorum. Saatlik <strong>400 tl</strong>.</p>
 				<h3>İletişim: 0530 479 6390</h3>
 
     				<a href="https://www.instagram.com/ata_ozenc44/" class="btn btn-default">Learn More</a>
