--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- CSS
   ================================================== -->
     <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet"> 
     <link rel="stylesheet" href="css/font-awesome.min.css"> 
     <link rel="stylesheet" href="css/animate.css"> 
@@ -39,7 +40,7 @@
 					<img width="400px" src="https://i.imgur.com/l9cTFQf.jpeg"/>
 					<img width="400px" src="https://i.imgur.com/bpTkanC.jpeg"/>
 				</div>
-				<p color="white">Merhaba, ben Ata 20 yaşındayım, 18-30 yaş arası bayanlara hizmet veriyorum. Saatlik <strong>400 tl</strong>.</p>
+				<p class="">Merhaba, ben Ata 20 yaşındayım, 18-30 yaş arası bayanlara hizmet veriyorum. Saatlik <strong>400 tl</strong>.</p>
 				<h3>İletişim: 0530 479 6390</h3>
 
     				<a href="https://www.instagram.com/ata_ozenc44/" class="btn btn-default">Learn More</a>
