--- a/index.html
+++ b/index.html
@@ -36,12 +36,16 @@
     				<h2 class="title"> 
 	    					Jigolo ata<br/>
     				</h2>
-				<div>
-					<img width="400px" src="https://i.imgur.com/l9cTFQf.jpeg"/>
-					<img width="400px" src="https://i.imgur.com/bpTkanC.jpeg"/>
-				</div>
-				<p class="text-white">Merhaba, ben Ata 20 yaşındayım, 18-30 yaş arası bayanlara hizmet veriyorum. Saatlik <strong>400 tl</strong>.</p>
-				<h3>İletişim: 0530 479 6390</h3>
+            <div class="row">
+              <div class="col-sm">
+                <img width="400px" src="https://i.imgur.com/l9cTFQf.jpeg"/>
+					      <img width="400px" src="https://i.imgur.com/bpTkanC.jpeg"/>
+              </div>
+              <div class="col-sm">
+                <p class="text-white">Merhaba, ben Ata 20 yaşındayım, 18-30 yaş arası bayanlara hizmet veriyorum. Saatlik <strong>400 tl</strong>.</p>
+				        <h3>İletişim: 0530 479 6390</h3>
+              </div>
+            </div>
 
     				<a href="https://www.instagram.com/ata_ozenc44/" class="btn btn-default">Learn More</a>
     			</div>
