--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     
-    <title>Jigolata</title>
+    <title>Zoğurtan</title>
 
     <!-- Mobile Specific Metas
   ================================================== -->
@@ -34,17 +34,17 @@
     		<div class="row">
     			<div class="banner-content wow fadeInRight">
     				<h2 class="title"> 
-	    					Jigolo ata<br/>
+	    					İspiyoncu Uğurtan<br/>
     				</h2>
             <div class="row">
               <div class="col-sm">
-                <img width="400px" src="./images/l9cTFQf.jpeg"/>
-					      <img width="400px" src="./images/bpTkanC.jpeg"/>
+                <img width="400px" src="./images/WhatsApp Görsel 2023-04-09 saat 01.18.31.jpg"/>
+					      <img width="400px" src="./images/WhatsApp Görsel 2023-08-22 saat 20.06.47.jpg"/>
               </div>
               <div class="col-sm">
-                <p class="text-white">Merhaba, ben Ata 20 yaşındayım, Ankara içi 18-30 yaş arası bayanlara hizmet veriyorum. Saatlik <strong>400 tl</strong>.</p>
-				        <h3>İletişim: 0530 479 6390</h3>
-              <a href="https://www.instagram.com/ata_ozenc44/" class="btn btn-default">Learn More</a>
+                <p class="text-white">Ben atılım endüstri mühendisliği 3. sınıf öğrencisi ispiyoncu bi <strong>itim</strong>.</p>
+				        <h3>Hatam varsa arayın: 0530 479 6390</h3>
+              <a href="https://www.instagram.com/gunaydinugurtan/" class="btn btn-default">Learn More</a>
             </div>
             </div>
 
