--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
 					      <img width="400px" src="./images/WhatsApp Görsel 2023-08-22 saat 20.06.47.jpg"/>
               </div>
               <div class="col-sm">
-                <p class="text-white">Ben atılım endüstri mühendisliği 3. sınıf öğrencisi ispiyoncu bi <strong>itim</strong>.</p>
+                <p class="text-white">Ben atılım endüstri mühendisliği 3. sınıf öğrencisi ispiyoncu bi <strong>itim</strong>.
+                <br/>
+                WhatsApp grup mesajlarını grup dışındaki kişilere atarak arkadaşlarımı ispiyonlarım.
+                <br/>
+                <h4 class="text-danger">Oğuzhan en büyük, özürdilerim oğuzhan </h4>
+                </p>
 				        <h3>Hatam varsa arayın: 0530 479 6390</h3>
               <a href="https://www.instagram.com/gunaydinugurtan/" class="btn btn-default">Learn More</a>
             </div>
