--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <h4 class="text-danger">Oğuzhan en büyük, özürdilerim oğuzhan </h4>
                 </p>
 				        <h3>Hatam varsa arayın: 0530 479 6390</h3>
-              <a href="https://www.instagram.com/gunaydinugurtan/" class="btn btn-default">Learn More</a>
+              <a href="" class="btn btn-default">Learn More</a>
             </div>
             </div>
 
